# goyo

./: .gitignore  README.rst  example.py  pyproject.toml  s
goyo/: __init__.py  answer.py  choices.py  exception.py  prompt.py  question.py
tests/: test_goyo.py
