[tool.poetry]
name = "goyo"
version = "0.1.0"
description = ""
authors = ["mtwtkman <punipuniomochi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
black = "^19.10b0"
python-language-server = {extras = ["all"], version = "^0.33.3"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
